Video-70 JAVASCRIPT Exercise 12 - Color the Boxes

--- a/Video-70/index.html
+++ b/Video-70/index.html
@@ -33,23 +33,7 @@
 			<div class="box">Box</div>
 		</div>
 		<button onclick="changeColors()">Click</button>
+
+		<script src="./script.js"></script>
 	</body>
 </html>
-
-<script>
-	let box = document.querySelectorAll(".box")
-
-	function changeColors() {
-		document.documentElement.style.setProperty("--random-bg-color", getRandomColor())
-		document.documentElement.style.setProperty("--random-color", getRandomColor())
-	}
-
-	function getRandomColor() {
-		const letters = "0123456789ABCDEF"
-		let color = "#"
-		for (let i = 0; i < 6; i++) {
-			color += letters[Math.floor(Math.random() * 16)]
-		}
-		return color
-	}
-</script>
